# maple-limit

./: Cargo.toml
.claude/: settings.local.json
src/: app.rs  boolean.rs  canvas.rs  document.rs  export.rs  grid.rs  main.rs  palette.rs  settings.rs  shape.rs  theme.rs  viewport.rs
src/tool/: bool_tool.rs  circle.rs  line.rs  mod.rs  pen.rs  polygon.rs  rectangle.rs  select.rs  shape.rs  spline.rs
src/ui/: sidebar.rs  toolbar.rs
