[package]
name = "maple-limit"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14", features = ["canvas", "image", "svg"] }
svg = "0.18"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
directories = "5"
i_overlay = "1"
